api/src/main/java/com/example/api/error/ApiError.java
package com.example.api.error;

import com.example.api.base.BaseError;
import org.springframework.http.HttpStatus;

public class ApiError implements BaseError {

    @Override
    public HttpStatus getErrorCode() {
        return HttpStatus.BAD_REQUEST;
    }

    @Override
    public String getErrorMessage() {
        return "Api Service Error!";
    }
}
